Added @types/node, include "node" in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
         "types": [
-            "chrome"
+            "chrome",
+            "node"
         ]
     },
     "include": [
