--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "license": "MIT",
     "devDependencies": {
         "@types/chrome": "^0.1.27",
+        "@types/node": "^24.9.2",
         "esbuild": "^0.25.11",
         "oxlint": "^1.25.0",
         "prettier": "^3.6.2",
