--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
-    "name": "autoopen-steam",
-    "version": "1.1.0",
-    "description": "Chromium extension to open Steam Workshop items in the Steam desktop app",
-    "private": true,
-    "scripts": {
-        "build": "tsx build.ts",
-        "build:prod": "tsx build.ts --prod",
-        "watch": "tsx build.ts --watch",
-        "lint": "oxlint src",
-        "format": "prettier --write \"src/**/*.{ts,html,css,json}\"",
-        "format:check": "prettier --check \"src/**/*.{ts,html,css,json}\"",
-        "clean": "node -e \"require('fs').rmSync('dist', {recursive: true, force: true})\"",
-        "package": "tsx scripts/package.ts",
-        "version:patch": "pnpm version patch --no-git-tag-version && tsx scripts/version-bump.ts",
-        "version:minor": "pnpm version minor --no-git-tag-version && tsx scripts/version-bump.ts",
-        "version:major": "pnpm version major --no-git-tag-version && tsx scripts/version-bump.ts"
-    },
-    "keywords": [
-        "steam",
-        "workshop",
-        "chrome-extension",
-        "browser-extension"
-    ],
-    "author": "",
-    "license": "MIT",
-    "devDependencies": {
-        "@types/chrome": "^0.1.27",
-        "@types/node": "^24.9.2",
-        "esbuild": "^0.25.11",
-        "oxlint": "^1.25.0",
-        "prettier": "^3.6.2",
-        "tsx": "^4.20.6",
-        "typescript": "^5.9.3"
-    }
+  "name": "autoopen-steam",
+  "version": "1.2.0",
+  "description": "Chromium extension to open Steam Workshop items in the Steam desktop app",
+  "private": true,
+  "scripts": {
+    "build": "tsx build.ts",
+    "build:prod": "tsx build.ts --prod",
+    "watch": "tsx build.ts --watch",
+    "lint": "oxlint src",
+    "format": "prettier --write \"src/**/*.{ts,html,css,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,html,css,json}\"",
+    "clean": "node -e \"require('fs').rmSync('dist', {recursive: true, force: true})\"",
+    "package": "tsx scripts/package.ts",
+    "version:patch": "pnpm version patch --no-git-tag-version && tsx scripts/version-bump.ts",
+    "version:minor": "pnpm version minor --no-git-tag-version && tsx scripts/version-bump.ts",
+    "version:major": "pnpm version major --no-git-tag-version && tsx scripts/version-bump.ts",
+    "prepare": "husky"
+  },
+  "keywords": [
+    "steam",
+    "workshop",
+    "chrome-extension",
+    "browser-extension"
+  ],
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/chrome": "^0.1.27",
+    "@types/node": "^24.9.2",
+    "esbuild": "^0.25.11",
+    "husky": "^9.1.7",
+    "oxlint": "^1.25.0",
+    "prettier": "^3.6.2",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
+  }
 }
