--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,9 +8,7 @@
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "permissions": [
-    "storage"
-  ],
+  "permissions": ["storage"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -27,12 +25,8 @@
         "*://steamcommunity.com/sharedfiles/filedetails/*",
         "*://steamcommunity.com/workshop/filedetails/*"
       ],
-      "js": [
-        "content.js"
-      ],
-      "css": [
-        "content.css"
-      ],
+      "js": ["content.js"],
+      "css": ["content.css"],
       "run_at": "document_idle"
     }
   ]
