--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,14 +1,16 @@
 {
   "manifest_version": 3,
   "name": "AutoOpen Steam",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "Open Steam Workshop items in the Steam desktop app with a single click",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "permissions": ["storage"],
+  "permissions": [
+    "storage"
+  ],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -25,8 +27,12 @@
         "*://steamcommunity.com/sharedfiles/filedetails/*",
         "*://steamcommunity.com/workshop/filedetails/*"
       ],
-      "js": ["content.js"],
-      "css": ["content.css"],
+      "js": [
+        "content.js"
+      ],
+      "css": [
+        "content.css"
+      ],
       "run_at": "document_idle"
     }
   ]
