--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,8 +8,13 @@ on:
   workflow_dispatch:
 
 jobs:
+  quality:
+    name: Quality Checks
+    uses: ./.github/workflows/quality.yml
+
   release:
     name: Build and Release
+    needs: quality
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -30,12 +35,6 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-
-      - name: Lint
-        run: pnpm run lint
-
-      - name: Format check
-        run: pnpm run format:check
 
       - name: Build production
         run: pnpm run build:prod
